--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,15 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 } */
+@keyframes width {
+  0%{
+    width: 0%; 
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.animate-width {
+  animation: width 5s linear forwards;
+}
