--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,25 @@
 
 @custom-variant dark (&:is(.dark *));
 
+:root {
+  --swiper-pagination-color: #169B4C; /* Color of the active pagination bullet */
+  --swiper-pagination-bullet-inactive-color: #169B4C; /* Color of inactive bullets */
+  --swiper-pagination-bullet-inactive-opacity: 0.6; /* Opacity of inactive bullets */
+  /* Other pagination-related custom properties can also be adjusted */
+}
+
+/* Styling for all pagination bullets */
+.swiper-pagination-bullet {
+  height: 12px !important;
+  width: 12px !important;
+}
+
+/* Styling for the active pagination bullet */
+.swiper-pagination-bullet-active {
+  height: 8px !important;
+  width: 8px !important;
+}
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
